--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -31,10 +31,10 @@ jobs:
 
       - name: Validate mapping JSON files
         run: |
-          for file in $(find . -name "*.json"); do
-            echo "Validating $file"
-            jq empty "$file"
-          done
+            for file in $(find ./Services/Resources/Maps -name "*.json"); do
+                echo "Validating $file"
+                jq empty "$file"
+            done
 
       - name: Check for vulnerable packages
         run: dotnet list package --vulnerable
