--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -5,7 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Melanchall.DryWetMidi" Version="8.0.1" />
+    <PackageReference Include="Melanchall.DryWetMidi" Version="8.0.1" PrivateAssets="all"/>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
   </ItemGroup>
 
