--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,39 +1,43 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach"
-        },
-        {
-            "name": ".NET MAUI MacCatalyst Launch",
+            "name": "Launch CLI",
             "type": "coreclr",
             "request": "launch",
-            "program": "${workspaceFolder}/src/GUI/bin/Debug/net9.0-maccatalyst/maccatalyst-arm64/GUI.app/Contents/MacOS/GUI",
-            "args": [],
-            "cwd": "${workspaceFolder}/src/GUI",
-            "stopAtEntry": false,
-            "console": "internalConsole"
-        },
-        {
-            "name": ".NET Core Launch (console)",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/src/CLI/bin/Debug/net9.0/CLI.dll",
-            "args": [],
+            "program": "${workspaceFolder}/src/CLI/bin/Debug/net9.0/CLI",
             "cwd": "${workspaceFolder}/src/CLI",
-            "console": "internalConsole",
-            "stopAtEntry": false
+            "args": [
+                "GuitarPro",
+                "StevenSlate",
+                "${workspaceFolder}/midis/test.mid"
+            ],
+            "console": "integratedTerminal"
         },
         {
-            "name": ".NET Core Attach",
+            "name": "Launch API",
             "type": "coreclr",
-            "request": "attach"
+            "request": "launch",
+            "program": "${workspaceFolder}/src/API/bin/Debug/net9.0/API",
+            "cwd": "${workspaceFolder}/src/API",
+            "launchBrowser": {
+                "enabled": true,
+                "args": "${auto-detect-url}",
+                "windows": {
+                    "command": "cmd.exe",
+                    "args": "/C start ${auto-detect-url}"
+                },
+                "osx": {
+                    "command": "open"
+                },
+                "linux": {
+                    "command": "xdg-open"
+                }
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "console": "internalConsole"
         }
     ]
 }
