--- a/src/CLI/CLI.csproj
+++ b/src/CLI/CLI.csproj
@@ -9,6 +9,11 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <AssemblyName>drummidi</AssemblyName>
+    <RootNamespace>DrumMidiRemapper.CLI</RootNamespace>
+    <ApplicationTitle>Drum Midi Remapper CLI</ApplicationTitle>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
 </Project>
