--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -32,18 +32,18 @@ jobs:
 
       - name: Build Windows MSIX
         run: |
-          dotnet publish ./GUI/GUI.csproj -f net9.0-windows10.0.19041.0 -c Release `
+          dotnet publish ./src/GUI/GUI.csproj -f net9.0-windows10.0.19041.0 -c Release `
             -p:Version=${{ env.VERSION }} `
             -p:WindowsPackageType=MSIX `
             -p:GenerateAppxPackageOnBuild=true
 
       - name: Build CLI
-        run: dotnet publish ./CLI/CLI.csproj -c Release -r win-x64 --self-contained true -p:Version=${{ env.VERSION }} -o ./cli-publish
+        run: dotnet publish ./src/CLI/CLI.csproj -c Release -r win-x64 --self-contained true -p:Version=${{ env.VERSION }} -o ./cli-publish
 
       - name: Package Windows MSIX
         shell: pwsh
         run: |
-          $msix = Get-ChildItem -Path ./GUI/bin/Release/** -Recurse -Include "*.msix" | Select-Object -First 1
+          $msix = Get-ChildItem -Path ./src/GUI/bin/Release/** -Recurse -Include "*.msix" | Select-Object -First 1
           Compress-Archive -Path $msix.FullName -DestinationPath DrumMidiRemapper-Windows-${{ env.VERSION }}.zip
 
       - uses: actions/upload-artifact@v4
@@ -73,12 +73,12 @@ jobs:
         run: dotnet restore
 
       - name: Build MacCatalyst App
-        run: dotnet publish ./GUI/GUI.csproj -f net9.0-maccatalyst -c Release -p:Version=${{ env.VERSION }}
+        run: dotnet publish ./src/GUI/GUI.csproj -f net9.0-maccatalyst -c Release -p:Version=${{ env.VERSION }}
 
       - name: Create DMG Installer
         run: |
           brew install create-dmg
-          APP_PATH=$(find ./GUI/bin/Release/net9.0-maccatalyst/maccatalyst/ -name "*.app" | head -n 1)
+          APP_PATH=$(find ./src/GUI/bin/Release/net9.0-maccatalyst/maccatalyst/ -name "*.app" | head -n 1)
           create-dmg \
             --volname "Drum Midi Remapper" \
             --window-pos 200 120 \
@@ -89,7 +89,7 @@ jobs:
             "DrumMidiRemapper-${{ env.VERSION }}.dmg" "$APP_PATH"
 
       - name: Build CLI
-        run: dotnet publish ./CLI/CLI.csproj -c Release -r osx-x64 --self-contained true -p:Version=${{ env.VERSION }} -o ./cli-publish
+        run: dotnet publish ./src/CLI/CLI.csproj -c Release -r osx-x64 --self-contained true -p:Version=${{ env.VERSION }} -o ./cli-publish
 
       - uses: actions/upload-artifact@v4
         with:
@@ -112,7 +112,7 @@ jobs:
         run: dotnet restore
 
       - name: Build CLI Linux
-        run: dotnet publish ./CLI/CLI.csproj -c Release -r linux-x64 --self-contained true -p:Version=${{ env.VERSION }} -o ./cli-publish
+        run: dotnet publish ./src/CLI/CLI.csproj -c Release -r linux-x64 --self-contained true -p:Version=${{ env.VERSION }} -o ./cli-publish
 
       - uses: actions/upload-artifact@v4
         with:
