--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net9.0;net9.0-maccatalyst</TargetFrameworks>
+    <TargetFrameworks Condition="'$(IsMacCatalyst)' == 'true'">net9.0-maccatalyst</TargetFrameworks>
+    <TargetFrameworks Condition="'$(IsMacCatalyst)' != 'true'">net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
