--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -8,12 +8,32 @@ on:
     branches: [ main ]
 
 jobs:
-  build-windows:
-    name: Build Windows Desktop + CLI (${{ github.ref_name }})
-    runs-on: windows-latest
+  version:
+    name: 🏷️ Generate Version
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.set-version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
+      - name: 🏷️ Generate semantic version from Git tag
+        id: set-version
+        run: |
+          TAG=$(git describe --tags --abbrev=0)
+          VERSION_BASE=${TAG#v}
+          COUNT=$(git rev-list --count ${TAG}..HEAD)
+          VERSION="$VERSION_BASE.$COUNT"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "📦 Using version: $VERSION"
+
+  build-windows:
+    name: Build Windows Desktop + CLI
+    runs-on: windows-latest
+    needs: version
+    steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.0.x
@@ -30,32 +50,32 @@ jobs:
       - name: Build Windows MSIX
         run: |
           dotnet publish ./src/GUI/GUI.csproj -f net9.0-windows10.0.19041.0 -c Release `
-            -p:Version=${{ github.ref_name }} `
+            -p:Version=${{ needs.version.outputs.version }} `
             -p:WindowsPackageType=MSIX `
             -p:GenerateAppxPackageOnBuild=true
 
       - name: Build CLI
-        run: dotnet publish ./src/CLI/CLI.csproj -c Release -r win-x64 --self-contained true -p:Version=${{ github.ref_name }} -o ./cli-publish
+        run: dotnet publish ./src/CLI/CLI.csproj -c Release -r win-x64 --self-contained true -p:Version=${{ needs.version.outputs.version }} -o ./cli-publish
 
       - name: Package Windows MSIX
         shell: pwsh
         run: |
           $msix = Get-ChildItem -Path ./src/GUI/bin/Release/** -Recurse -Include "*.msix" | Select-Object -First 1
-          Compress-Archive -Path $msix.FullName -DestinationPath DrumMidiRemapper-Windows-${{ github.ref_name }}.zip
+          Compress-Archive -Path $msix.FullName -DestinationPath DrumMidiRemapper-Windows-${{ needs.version.outputs.version }}.zip
 
       - uses: actions/upload-artifact@v4
         with:
-          name: DrumMidiRemapper-Windows-${{ github.ref_name }}
+          name: DrumMidiRemapper-Windows-${{ needs.version.outputs.version }}
           path: |
-            DrumMidiRemapper-Windows-${{ github.ref_name }}.zip
+            DrumMidiRemapper-Windows-${{ needs.version.outputs.version }}.zip
             ./cli-publish/**
 
   build-macos:
-    name: Build macOS Desktop + CLI (${{ github.ref_name }})
+    name: Build macOS Desktop + CLI
     runs-on: macos-latest
+    needs: version
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.0.x
@@ -67,10 +87,10 @@ jobs:
           dotnet workload install maui-maccatalyst
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet workload restore
 
       - name: Build MacCatalyst App
-        run: dotnet publish ./src/GUI/GUI.csproj -f net9.0-maccatalyst -c Release -p:Version=${{ github.ref_name }}
+        run: dotnet publish ./src/GUI/GUI.csproj -f net9.0-maccatalyst -c Release -p:Version=${{ needs.version.outputs.version }}
 
       - name: Create DMG Installer
         run: |
@@ -83,24 +103,24 @@ jobs:
             --icon-size 100 \
             --icon "$APP_PATH" 175 190 \
             --app-drop-link 425 190 \
-            "DrumMidiRemapper-${{ github.ref_name }}.dmg" "$APP_PATH"
+            "DrumMidiRemapper-${{ needs.version.outputs.version }}.dmg" "$APP_PATH"
 
       - name: Build CLI
-        run: dotnet publish ./src/CLI/CLI.csproj -c Release -r osx-x64 --self-contained true -p:Version=${{ github.ref_name }} -o ./cli-publish
+        run: dotnet publish ./src/CLI/CLI.csproj -c Release -r osx-x64 --self-contained true -p:Version=${{ needs.version.outputs.version }} -o ./cli-publish
 
       - uses: actions/upload-artifact@v4
         with:
-          name: DrumMidiRemapper-macOS-${{ github.ref_name }}
+          name: DrumMidiRemapper-macOS-${{ needs.version.outputs.version }}
           path: |
-            DrumMidiRemapper-${{ github.ref_name }}.dmg
+            DrumMidiRemapper-${{ needs.version.outputs.version }}.dmg
             ./cli-publish/**
 
   build-linux:
-    name: Build Linux CLI only (${{ github.ref_name }})
+    name: Build Linux CLI only
     runs-on: ubuntu-latest
+    needs: version
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.0.x
@@ -109,9 +129,9 @@ jobs:
         run: dotnet restore
 
       - name: Build CLI Linux
-        run: dotnet publish ./src/CLI/CLI.csproj -c Release -r linux-x64 --self-contained true -p:Version=${{ github.ref_name }} -o ./cli-publish
+        run: dotnet publish ./src/CLI/CLI.csproj -c Release -r linux-x64 --self-contained true -p:Version=${{ needs.version.outputs.version }} -o ./cli-publish
 
       - uses: actions/upload-artifact@v4
         with:
-          name: DrumMidiRemapper-LinuxCLI-${{ github.ref_name }}
+          name: DrumMidiRemapper-LinuxCLI-${{ needs.version.outputs.version }}
           path: ./cli-publish/**
