--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -82,7 +82,7 @@ jobs:
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.4'
+          xcode-version: 'latest'
 
       - name: Install MAUI workloads
         run: |
@@ -133,7 +133,7 @@ jobs:
         run: dotnet restore ./src/CLI/CLI.csproj
 
       - name: Build CLI Linux
-        run: dotnet publish ./src/CLI/CLI.csproj -c Release -r linux-x64 --framework net9.0 --self-contained true -p:Version=${{ needs.version.outputs.version }} -o ./cli-publish --no-restore
+        run: dotnet publish ./src/CLI/CLI.csproj -c Release --framework net9.0 --self-contained true -p:Version=${{ needs.version.outputs.version }} -o ./cli-publish --no-restore
 
       - uses: actions/upload-artifact@v4
         with:
