--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 9.0.x
+          dotnet-version: 8.0.x
 
       - name: Install MAUI workloads
         run: |
@@ -78,10 +78,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 9.0.x
+          dotnet-version: 8.0.x
 
-      - name: Update XCode
-        run: sudo softwareupdate --install "Xcode-16.4"
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: 'latest'
 
       - name: Install MAUI workloads
         run: |
@@ -126,7 +127,7 @@ jobs:
   #     - uses: actions/checkout@v4
   #     - uses: actions/setup-dotnet@v4
   #       with:
-  #         dotnet-version: 9.0.x
+  #         dotnet-version: 8.0.x
 
   #     - name: Restore dependencies
   #       run: dotnet restore ./src/CLI/CLI.csproj
