--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -1,24 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks Condition="'$(IsMacCatalyst)' == 'true'">net8.0-maccatalyst</TargetFrameworks>
-    <TargetFrameworks Condition="'$(IsMacCatalyst)' != 'true'">net8.0</TargetFrameworks>
+    <!-- Multitarget explícito -->
+    <TargetFrameworks>net8.0;net8.0-maccatalyst</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <!-- Referencias de proyectos comunes -->
   <ItemGroup>
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <!-- Paquete siempre incluido -->
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net8.0-maccatalyst' ">
+  <!-- Excluir DryWetMidi solo en MacCatalyst -->
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
     <PackageReference Include="Melanchall.DryWetMidi" Version="8.0.1" />
   </ItemGroup>
 
+  <!-- Recursos JSON -->
   <ItemGroup>
     <EmbeddedResource Include="Resources/Maps/*.json" />
   </ItemGroup>
