--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -80,6 +80,9 @@ jobs:
         with:
           dotnet-version: 8.0.x
 
+      - name: Clean
+        run: dotnet clean ./src/GUI/GUI.csproj
+
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: 'latest'
