--- a/src/GUI/GUI.csproj
+++ b/src/GUI/GUI.csproj
@@ -44,7 +44,9 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Managers\Managers.csproj" />
-		<ProjectReference Include="..\Services\Services.csproj" />
+		<ProjectReference Include="..\Services\Services.csproj">
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</ProjectReference>
 	</ItemGroup>
 
 </Project>
