--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <!-- Excluir DryWetMidi solo en MacCatalyst -->
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' and '$(IsMacCatalyst)' != 'true' ">
     <PackageReference Include="Melanchall.DryWetMidi" Version="8.0.1" />
   </ItemGroup>
 
