--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -99,7 +99,7 @@ jobs:
       - name: Create DMG Installer
         run: |
           brew install create-dmg
-          APP_PATH=$(find ./src/GUI/bin/Release/net8.0-maccatalyst/maccatalyst/ -name "*.app" | head -n 1)
+          APP_PATH=$(find ./src/GUI/bin/Release/net8.0-maccatalyst -name "*.app" | head -n 1)
           create-dmg \
             --volname "Drum Midi Remapper" \
             --window-pos 200 120 \
